:rocket: Update WatchlistHasMovie endpoint
