# src/main/java/com/watchlist/backend/controllers/WatchlistMovieController.java
@@ -1,7 +1,9 @@
 package com.watchlist.backend.controllers;
 
 import com.watchlist.backend.entities.MoviePost;
+import com.watchlist.backend.entities.UpdateWatchlistHasMovie;
 import com.watchlist.backend.exceptions.DuplicatedWatchlistMovieException;
+import com.watchlist.backend.exceptions.WatchlistHasMovieNotFoundException;
 import com.watchlist.backend.exceptions.WatchlistNotFoundException;
 import com.watchlist.backend.model.WatchlistHasMovie;
 import com.watchlist.backend.services.WatchlistMovieService;
@@ -47,5 +49,22 @@ public class WatchlistMovieController {
         }
 
         return watchlistMovieService.addMovie(listId, moviePost);
+    }
+
+    @PutMapping("{hasMovieId}")
+    public WatchlistHasMovie updateMovie(@PathVariable long listId,
+                                         @PathVariable long hasMovieId,
+                                         @Valid @RequestBody UpdateWatchlistHasMovie updateHasMovie)
+            throws Throwable {
+        if (!watchlistService.exists(listId)) {
+            throw new WatchlistNotFoundException();
+        }
+
+        if (!watchlistMovieService.exists(hasMovieId)) {
+            throw new WatchlistHasMovieNotFoundException();
+        }
+
+        updateHasMovie.setHasMovieId(hasMovieId);
+        return watchlistMovieService.updateHasMovie(updateHasMovie);
     }
 }
