# src/main/java/com/watchlist/backend/entities/UpdateWatchlistHasMovie.java
@@ -1,0 +1,31 @@
+package com.watchlist.backend.entities;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import javax.validation.constraints.NotNull;
+import java.util.Date;
+
+public class UpdateWatchlistHasMovie {
+
+    private long hasMovieId;
+
+    @JsonProperty("seen_at")
+    @NotNull
+    private Date seenAt;
+
+    public long getHasMovieId() {
+        return hasMovieId;
+    }
+
+    public void setHasMovieId(long hasMovieId) {
+        this.hasMovieId = hasMovieId;
+    }
+
+    public Date getSeenAt() {
+        return seenAt;
+    }
+
+    public void setSeenAt(Date seenAt) {
+        this.seenAt = seenAt;
+    }
+}
